test/shouldfail/syntax2.fluffy
func main() : int:
	return (0 *
		0)
